@@ -384,26 +384,30 @@ end
 
 # red team base
 base
-position -370.0 0.0 0.0
-size 30.0 30.0 0.0
+position -350.0 0.0 10.0
+rotation 45.0
+size 35.0 35.0 0.0
 color 1
 end
 # green team base
 base
-position 370.0 0.0 0.0
-size 30.0 30.0 0.0
+position 350.0 0.0 10.0
+rotation 45.0
+size 35.0 35.0 0.0
 color 2
 end
 # blue team base
 base
-position 0.0 -370.0 0.0
-size 30.0 30.0 0.0
+position 0.0 -350.0 10.0
+rotation 45.0
+size 35.0 35.0 0.0
 color 3
 end
 # purple team base
 base
-position 0.0 370.0 0.0
-size 30.0 30.0 0.0
+position 0.0 350.0 10.0
+rotation 45.0
+size 35.0 35.0 0.0
 color 4
 end
 
